2005-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-get-headers-editoria):
	Extend the time slot in which to presume the url.

2005-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-get-headers-editoria):
	Presume the url for that day.

2005-04-11  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-the-register.el (shimbun-get-headers): Follow their
	wicked URL and redirect changes.

2005-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-from-address): Make it
	unreachable.
	(shimbun-sankei-group-table): Add the editoria group.
	(shimbun-index-url): Use shimbun-expand-url.
	(shimbun-get-headers): Use shimbun-sankei-get-headers-editoria for
	the editoria group; make the from address unreachable.
	(shimbun-sankei-get-headers-editoria): New function.
	(shimbun-clear-contents): Put the content-end boundary for
	articles in the editoria group.

2005-04-10  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* shimbun/sb-msports-nifty.el (shimbun-get-headers): Follow the
	change of the site design.

2005-04-10  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-atmarkit.el (shimbun-article): New define method.
	Before run it, replace xref in header to no param format.

2005-04-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-rss.el (shimbun-rss-get-encoding): Goto the beginning
	of the buffer first.

2005-04-09  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-zdnet-jp.el: New file.

	* shimbun/sb-cnet-jp.el (top): Renew address
	(shimbun-cnet-jp-clean-text-page): Remove.
	(shimbun-cnet-jp-retrieve-next-pages): Replace
	`shimbun-cnet-jp-clean-text-page' to `shimbun-clear-contents'.

2005-04-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-retrieve): Add new argument
	`newfld'.  Call `mew-shimbun-retrieve-article' with `newfld'.
	(mew-shimbun-retrieve-all): Treate `newfld' and call